Archive2/03/fa45d64575ac26/output
main.cpp:5:11: error: cannot initialize a variable of type 'int *' with an rvalue of type 'int'
    int * q = int();
          ^   ~~~~~
1 error generated.
